# databao-sample-talking-data

./: README.md
backend/: .env-sample  .gitignore  eda_duckdb.ipynb  main.py  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/routers/: __init__.py  analysis.py  data.py  health.py  voice.py
backend/app/schemas/: __init__.py  analysis.py  data.py  voice.py
backend/app/services/: analyzer.py
backend/app/services/voice/: __init__.py  base.py  deepgram.py
backend/scripts/: build_sidecar.py
frontend/: package.json  tsconfig.node.json
frontend/src/: App.tsx  index.css
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: DataAnalysisResults.tsx  DataTable.tsx  FileDropZone.tsx  MicButton.tsx  ScanningAnimation.tsx  VoiceQueryResult.tsx
frontend/src/components/ui/: progress.tsx  sonner.tsx
frontend/src/hooks/: useDataAnalysis.ts  useVoiceRecording.ts
frontend/src/types/: analysis.ts  voice.ts
