[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "."]
include = ["main.py", "scripts/"]

[project]
name = "talk-data"
version = "0.1.0"
description = "This application allows you to talk to data files & databases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "duckdb",
    "sqlalchemy",
    "python-multipart",
    "pydantic",
    "python-dotenv>=1.0.0",
    "nuitka",
    "ordered-set",
    "numpy",
    "pandas",
    "google-genai>=1.0.0",
    "deepgram-sdk>=3.0.0",
]

[project.scripts]
build-sidecar = "scripts.build_sidecar:build"
dev = "main:dev"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]
